apps/ui/src/components/List/Product001/style/_index.scss
@use "sass:map";
@use "../../../../styles/import" as *;

@mixin List001($options) {
  $defaults: (
    key: "default",
    gap: 10,
  );

  $settings: map.deep-merge($defaults, $options);

  .cm-list-001__wrapper {
    @include baseFontSizeForEm();
  }

  .cm-list-001__wrapper--#{map.get($settings, "key")} {
    .cm-list-001 {
      display: flex;
    }

    .cm-list-001--001,
    .cm-list-001--002 {
      flex-direction: column;
      gap: em(map.get($settings, "gap"));
    }

    .cm-list-001--002 {
      .cm-list-001__item {
        border-bottom: 1px solid #000;

        &:last-child {
          border-bottom: 0;
        }
      }
    }

    .cm-list-001--003 {
      gap: em(40);
    }
  }
}

